fix: custom msg'es do not have state

--- a/nbconvert/preprocessors/tests/files/JupyterWidgets.ipynb
+++ b/nbconvert/preprocessors/tests/files/JupyterWidgets.ipynb
@@ -2,47 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a72770a4f541425f8fe85833a3dc2a8e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Label(value=u'Hello World')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets\n",
-    "ipywidgets.Label('Hello World')"
+    "label = ipywidgets.Label('Hello World')\n",
+    "label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it should also handle custom msg'es\n",
+    "label.send({'msg': 'Hello'})"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
