fix test: iinclude output in JupyterWidget.ipynb

--- a/nbconvert/preprocessors/tests/files/JupyterWidgets.ipynb
+++ b/nbconvert/preprocessors/tests/files/JupyterWidgets.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f46f26da84b54255bccc3a69d7eb08de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='Hello World')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets\n",
     "label = ipywidgets.Label('Hello World')\n",
@@ -13,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
