--- a/nbconvert/tests/files/latex-linked-image.ipynb
+++ b/nbconvert/tests/files/latex-linked-image.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](testimage.png)"
+    "![image](test%20image.png)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -24,9 +24,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
