Removed newlines from clear notebook test. Refactored test_run_notebooks

--- a/nbconvert/preprocessors/tests/files/Clear Output.ipynb
+++ b/nbconvert/preprocessors/tests/files/Clear Output.ipynb
@@ -51,12 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world\n"
+      "Hello world"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world\")\n",
+    "print(\"Hello world\", end='')\n",
     "clear_output(wait=True)  # no output after this"
    ]
   },
@@ -69,14 +69,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "world\n"
+      "world"
      ]
     }
    ],
    "source": [
-    "print(\"Hello\")\n",
+    "print(\"Hello\", end='')\n",
     "clear_output(wait=True)  # here we have new output after wait=True\n",
-    "print(\"world\")"
+    "print(\"world\", end='')"
    ]
   },
   {
@@ -165,14 +165,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "world\n"
+      "world"
      ]
     }
    ],
    "source": [
     "handle4 = display(\"Hello\", display_id=\"id4\")\n",
     "clear_output(wait=True)\n",
-    "print('world')"
+    "print('world', end='')"
    ]
   },
   {
