--- a/nbconvert/preprocessors/tests/files/Parallel Execute.ipynb
+++ b/nbconvert/preprocessors/tests/files/Parallel Execute.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensure notebooks can execute in parallel\n",
+    "\n",
+    "This notebook uses a file system based \"lock\" to assert that two instances of the notebook kernel will run in parallel. Each instance writes to a file in a temporary directory, and then tries to read the other file from\n",
+    "the temporary directory, so that running them in sequence will fail, but running them in parallel will succed.\n",
+    "\n",
+    "Two notebooks are launched, each with an injected cell which sets the `this_notebook` variable. One notebook is set to `this_notebook = 'A'` and the other `this_notebook = 'B'`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the variable this_notebook is injectected in a cell above by the test framework.\n",
     "other_notebook = {'A':'B', 'B':'A'}[this_notebook]\n",
     "directory = os.environ['NBEXECUTE_TEST_PARALLEL_TMPDIR']\n",
     "with open(os.path.join(directory, 'test_file_{}.txt'.format(this_notebook)), 'w') as f:\n",
@@ -44,20 +57,6 @@
     "else:\n",
     "    assert False, \"Timed out – didn't get a message from {}\".format(other_notebook)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
