make a default global locations for custom user templates

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -210,6 +210,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Saving Custom Templates\n",
+    "\n",
+    "By default, nbconvert finds templates from a few locations.\n",
+    "\n",
+    "The recommended place to save custom templates, so that they are globally accessible to nbconvert, is your jupyter configuration directory:\n",
+    "\n",
+    "- ~./jupyter\n",
+    "    - nbconvert\n",
+    "        - templates\n",
+    "            - html\n",
+    "            - latex\n",
+    "\n",
+    "The HTML and LaTeX/PDF exporters will search the html and latex subdirectories for templates, respectively.\n",
+    "\n",
+    "To find your jupyter configuration directory you can use:\n",
+    "\n",
+    "```python\n",
+    "from jupyter_core.paths import jupyter_config_dir\n",
+    "print(jupyter_config_dir())\n",
+    "```\n",
+    "\n",
+    "Additionally,\n",
+    "\n",
+    "```python\n",
+    "TemplateExporter.template_path=['.']\n",
+    "```\n",
+    "\n",
+    "defines an additional list of paths that nbconvert can look for user defined templates. It defaults to searching for custom templates in the current working directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Template structure\n",
     "\n",
     "Nbconvert templates consist of a set of nested blocks. When defining a new\n",
@@ -376,7 +410,13 @@
    "source": [
     "### A few gotchas\n",
     "\n",
-    "Jinja blocks use `{% %}` by default which does not play nicely with LaTeX, so those are replaced by `((* *))` in LaTeX templates."
+    "Jinja uses `%`, `{`, and `}` for syntax by default which does not play nicely with LaTeX. In LaTeX, we have the following replacements:\n",
+    "\n",
+    "| Syntax   | Default | LaTeX   |\n",
+    "|----------|---------|---------|\n",
+    "| block    | {% %}   | ((* *)) |\n",
+    "| variable | {{ }}   | ((( ))) |\n",
+    "| comment  | {# #}   | ((= =)) |"
    ]
   },
   {
@@ -24921,7 +24961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
