--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -237,7 +237,11 @@
     "TemplateExporter.template_path=['.']\n",
     "```\n",
     "\n",
-    "defines an additional list of paths that nbconvert can look for user defined templates. It defaults to searching for custom templates in the current working directory."
+    "defines an additional list of paths that nbconvert can look for user defined templates. It defaults to searching for custom templates in the current working directory and can be changed through configuration options.\n",
+    "\n",
+    "### Packaging Custom Templates\n",
+    "\n",
+    "nbconvert will, by default, search the paths given by ```jupyter_core.paths.jupyter_path('nbconvert','templates')``` for additional templates. The HTML and LaTeX/PDF exporters will search html and latex subdirectories for templates respectively, just like from the configuration directory. These are the recommended locations to save nbconvert templates too when shipping a python package. nbconvert does not by default store any templates there."
    ]
   },
   {
