Applied PR feedback

--- a/nbconvert/preprocessors/tests/files/Parallel Execute B.ipynb
+++ b/nbconvert/preprocessors/tests/files/Parallel Execute B.ipynb
@@ -9,7 +9,7 @@
     "This notebook uses a file system based \"lock\" to assert that two instances of the notebook kernel will run in parallel. Each instance writes to a file in a temporary directory, and then tries to read the other file from\n",
     "the temporary directory, so that running them in sequence will fail, but running them in parallel will succed.\n",
     "\n",
-    "Two notebooks are launched, each with an injected cell which sets the `this_notebook` variable. One notebook is set to `this_notebook = 'A'` and the other `this_notebook = 'B'`."
+    "Two notebooks are launched, each which sets the `this_notebook` variable. One notebook is set to `this_notebook = 'A'` and the other `this_notebook = 'B'`."
    ]
   },
   {
@@ -31,7 +31,8 @@
    "outputs": [],
    "source": [
     "# the variable this_notebook is injectected in a cell above by the test framework.\n",
-    "other_notebook = {'A':'B', 'B':'A'}[this_notebook]\n",
+    "this_notebook = 'B'\n",
+    "other_notebook = 'A'\n",
     "directory = os.environ['NBEXECUTE_TEST_PARALLEL_TMPDIR']\n",
     "with open(os.path.join(directory, 'test_file_{}.txt'.format(this_notebook)), 'w') as f:\n",
     "    f.write('Hello from {}'.format(this_notebook))"
@@ -59,7 +60,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
