remove config directory

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -214,9 +214,9 @@
     "\n",
     "By default, nbconvert finds templates from a few locations.\n",
     "\n",
-    "The recommended place to save custom templates, so that they are globally accessible to nbconvert, is your jupyter configuration directory:\n",
+    "The recommended place to save custom templates, so that they are globally accessible to nbconvert, is your jupyter data directories:\n",
     "\n",
-    "- ~./jupyter\n",
+    "- share/jupyter\n",
     "    - nbconvert\n",
     "        - templates\n",
     "            - html\n",
@@ -227,8 +227,8 @@
     "To find your jupyter configuration directory you can use:\n",
     "\n",
     "```python\n",
-    "from jupyter_core.paths import jupyter_config_dir\n",
-    "print(jupyter_config_dir())\n",
+    "from jupyter_core.paths import jupyter_path\n",
+    "print(jupyter_path('nbconvert','templates'))\n",
     "```\n",
     "\n",
     "Additionally,\n",
@@ -237,11 +237,7 @@
     "TemplateExporter.template_path=['.']\n",
     "```\n",
     "\n",
-    "defines an additional list of paths that nbconvert can look for user defined templates. It defaults to searching for custom templates in the current working directory and can be changed through configuration options.\n",
-    "\n",
-    "### Packaging Custom Templates\n",
-    "\n",
-    "nbconvert will, by default, search the paths given by ```jupyter_core.paths.jupyter_path('nbconvert','templates')``` for additional templates. The HTML and LaTeX/PDF exporters will search html and latex subdirectories for templates respectively, just like from the configuration directory. These are the recommended locations to save nbconvert templates too when shipping a python package. nbconvert does not by default store any templates there."
+    "defines an additional list of paths that nbconvert can look for user defined templates. It defaults to searching for custom templates in the current working directory and can be changed through configuration options."
    ]
   },
   {
@@ -24965,7 +24961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
