Fix #1136, typo in customizing doc

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "From the code, you can see that non-code cells are also exported. If you wanted to change that behaviour, you would first look to nbconvert [configuration options page](./config_options.rst) to see if there is an option available that can give you your desired behaviour. \n",
     "\n",
-    "In this case, if you wanted to remove code cells from the output, you could use the `TemplateExporter.exclude_markdown` traitlet directly, as below. "
+    "In this case, if you wanted to remove non-code cells from the output, you could use the `TemplateExporter.exclude_markdown` traitlet directly, as below. "
    ]
   },
   {
