Fixed doc templates usages and added backwards compatability catches

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "As mentioned above, if you want to change this behavior, you can use a custom template.  The custom template inherits from the Python template and overwrites the markdown blocks so that they are empty. \n",
     "\n",
-    "Below is an example of a custom template, which we write to a file called `simplepython.tpl`. This template removes markdown cells from the output, and also changes how the execution count numbers are formatted:"
+    "Below is an example of a custom template, which we write to a file called `simplepython.py.j2`. This template removes markdown cells from the output, and also changes how the execution count numbers are formatted:"
    ]
   },
   {
@@ -67,9 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile simplepython.tpl\n",
+    "%%writefile simplepython.py.j2\n",
     "\n",
-    "{% extends 'python.tpl'%}\n",
+    "{% extends 'python/index.py.j2'%}\n",
     "\n",
     "## remove markdown cells\n",
     "{% block markdowncell %}\n",
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!jupyter nbconvert --to python 'example.ipynb' --stdout --template=simplepython.tpl"
+    "!jupyter nbconvert --to python 'example.ipynb' --stdout --template-file=simplepython.py.j2"
    ]
   },
   {
@@ -110,10 +110,13 @@
     "- share/jupyter\n",
     "    - nbconvert\n",
     "        - templates\n",
-    "            - html\n",
+    "            - base\n",
+    "            - classic\n",
+    "            - lab\n",
     "            - latex\n",
+    "            - markdown\n",
     "\n",
-    "The HTML and LaTeX/PDF exporters will search the html and latex subdirectories for templates, respectively.\n",
+    "The HTML and LaTeX/PDF exporters will search the lab and latex subdirectories for templates by default, respectively.\n",
     "\n",
     "To find your jupyter configuration directory you can use:\n",
     "\n",
@@ -204,9 +207,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile mytemplate.tpl\n",
+    "%%writefile mytemplate.html.j2\n",
     "\n",
-    "{% extends 'full.tpl'%}\n",
+    "{% extends 'lab/index.html.j2'%}\n",
     "{% block any_cell %}\n",
     "{% if 'Hard' in cell['metadata'].get('tags', []) %}\n",
     "    <div style=\"border:thin solid red\">\n",
@@ -239,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example = !jupyter nbconvert --to html 'example.ipynb' --template=mytemplate.tpl --stdout\n",
+    "example = !jupyter nbconvert --to html 'example.ipynb' --template-file=mytemplate.html.j2 --stdout\n",
     "example = example[3:] # have to remove the first three lines which are not proper html\n",
     "from IPython.display import HTML, display\n",
     "display(HTML('\\n'.join(example))) "
@@ -295,20 +298,37 @@
     "\n",
     "First, make sure that you can reproduce the previous result using the cell tags template that we have provided above. \n",
     "\n",
-    "**Easy**: If you want to make it easy on yourself, create a new file `my_template.tpl` in the same directory as `example.ipynb` and copy the contents of the cell we use to write `mytemplate.tpl` to the file system. \n",
+    "**Easy**: If you want to make it easy on yourself, create a new file `my_template.html.j2` in the same directory as `example.ipynb` and copy the contents of the cell we use to write `mytemplate.html.j2` to the file system. \n",
     "\n",
-    "Then run `jupyter nbconvert --to html 'example.ipynb' --template=mytemplate.tpl` and see if your \n",
+    "Then run `jupyter nbconvert --to html 'example.ipynb' --template-file=mytemplate.html.j2` and see if your template file works. \n",
+    "\n",
     "\n",
     "**Moderate**: If you want more of a challenge, try recreating the jinja template by modifying the following jinja template file:\n",
     "\n",
     "```python\n",
-    "{% extends 'full.tpl'%}\n",
+    "{% extends 'lab/base.html.j2'%}\n",
     "{% block any_cell %}\n",
     "    <div style=\"border:thin solid red\">\n",
     "        {{ super() }}\n",
     "    </div>\n",
     "{% endblock any_cell %}\n",
     "```\n",
+    "\n",
+    "**Moderate**: If you want custom config or a composition of files, you'll want to instead make a template directory. Create the directory `mytemplate` and add the following files to it:\n",
+    "\n",
+    "- `index.html.j2` -- copy the contents of the cell we use to write `mytemplate.html.j2` to the file system.\n",
+    "- `conf.json` -- add the following contents to set the default configuration options\n",
+    "```json\n",
+    "{\n",
+    "    \"base_template\": \"lab\",\n",
+    "    \"mimetypes\": {\n",
+    "        \"text/html\": true\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Then run `jupyter nbconvert --to html 'example.ipynb' --template=mytemplate` and see if your package works. This option allows for much more flexibility and combination of configuration and additional config files to support more advanced templates.\n",
+    "\n",
     "\n",
     "**Hard**: If you want even more of a challenge, try recreating the jinja template from scratch. \n",
     "\n",
@@ -318,10 +338,10 @@
     "\n",
     "#### Convert `example.ipynb` with formatting from custom metadata\n",
     "\n",
-    "Once you've written your template, try converting `example.ipynb` using the following command (making sure that `your_template.tpl` is in your local directory where you are running the command):\n",
+    "Once you've written your template, try converting `example.ipynb` using the following command (making sure that `your_template.html.j2` is in your local directory where you are running the command):\n",
     "\n",
     "```bash\n",
-    "jupyter nbconvert --to html 'example.ipynb' --template=your_template.tpl --stdout\n",
+    "jupyter nbconvert --to html 'example.ipynb' --template=your_template.html.j2 --stdout\n",
     "```\n",
     "\n",
     "The resulting display should pick out different cells to be bordered with green, orange, or red.\n",
@@ -12534,7 +12554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
