--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -38,7 +38,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -65,7 +64,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -90,7 +88,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -102,10 +99,10 @@
     "# 1. Import the exporter\n",
     "from nbconvert import HTMLExporter\n",
     "\n",
-    "# 2. Instantiate the exporter. We use the `basic` template for now; we'll get into more details\n",
+    "# 2. Instantiate the exporter. We use the `classic` template for now; we'll get into more details\n",
     "# later about how to customize the exporter further.\n",
     "html_exporter = HTMLExporter()\n",
-    "html_exporter.template_file = 'basic'\n",
+    "html_exporter.template_name = 'classic'\n",
     "\n",
     "# 3. Process the notebook we loaded earlier\n",
     "(body, resources) = html_exporter.from_notebook_node(jake_notebook)"
@@ -122,7 +119,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -145,7 +141,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -183,7 +178,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -217,7 +211,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -238,7 +231,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -298,7 +290,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -326,7 +317,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -382,7 +372,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -419,7 +408,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -450,7 +438,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -459,9 +446,9 @@
    "source": [
     "from jinja2 import DictLoader\n",
     "\n",
-    "dl = DictLoader({'full.tpl': \n",
+    "dl = DictLoader({'footer': \n",
     "\"\"\"\n",
-    "{%- extends 'basic.tpl' -%} \n",
+    "{%- extends 'lab/index.html.j2' -%} \n",
     "\n",
     "{% block footer %}\n",
     "FOOOOOOOOTEEEEER\n",
@@ -469,7 +456,7 @@
     "\"\"\"})\n",
     "\n",
     "\n",
-    "exportHTML = HTMLExporter(extra_loaders=[dl])\n",
+    "exportHTML = HTMLExporter(extra_loaders=[dl], template_file='footer')\n",
     "(body, resources) = exportHTML.from_notebook_node(jake_notebook)\n",
     "for l in body.split('\\n')[-4:]:\n",
     "    print(l)"
@@ -523,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
