DOC: avoid nested markup
... because nbsphinx/reST cannot handle this (yet).

--- a/docs/source/customizing.ipynb
+++ b/docs/source/customizing.ipynb
@@ -272,7 +272,7 @@
     "foo[\"bar\"]\n",
     "```\n",
     "\n",
-    "Accordingly, it is better to use the [`{}.get` method](https://docs.python.org/3.6/library/stdtypes.html#dict.get) which allows you to set a default value to return if no key is found as the second argument. \n",
+    "Accordingly, it is better to use the [{}.get()](https://docs.python.org/3.6/library/stdtypes.html#dict.get) method which allows you to set a default value to return if no key is found as the second argument. \n",
     "\n",
     "Hint: if your metadata items are located at `cell.metadata.example.difficulty`, the following Python code would get the value defaulting to an empty string (`''`) if nothing is found:\n",
     "\n",
