Fix example notebook wrt config traits

--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -386,10 +386,8 @@
     "    \n",
     "    # I could also read the cells from nb.metadata.pelican if someone wrote a JS extension,\n",
     "    # but for now I'll stay with configurable value. \n",
-    "    start = Integer(0,  help=\"first cell of notebook to be converted\")\n",
-    "    end   = Integer(-1, help=\"last cell of notebook to be converted\")\n",
-    "    start.tag(config='True')\n",
-    "    end.tag(config='True')\n",
+    "    start = Integer(0,  help=\"first cell of notebook to be converted\").tag(config=True)\n",
+    "    end   = Integer(-1, help=\"last cell of notebook to be converted\").tag(config=True)\n",
     "    \n",
     "    def preprocess(self, nb, resources):\n",
     "        self.log.info(\"I'll keep only cells from %d to %d\", self.start, self.end)\n",
