fix bad  url in docs

--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "from urllib.request import urlopen\n",
     "\n",
-    "url = 'http://jakevdp.github.com/downloads/notebooks/XKCD_plots.ipynb'\n",
+    "url = 'https://jakevdp.github.io/downloads/notebooks/XKCD_plots.ipynb'\n",
     "response = urlopen(url).read().decode()\n",
     "response[0:60] + ' ...'"
    ]
