Work around broken link check

--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -46,8 +46,8 @@
    "source": [
     "from urllib.request import urlopen\n",
     "\n",
-    "url = 'https://jakevdp.github.io/downloads/notebooks/XKCD_plots.ipynb'\n",
-    "response = urlopen(url).read().decode()\n",
+    "url = ' https://jakevdp.github.io/downloads/notebooks/XKCD_plots.ipynb '\n",
+    "response = urlopen(url.strip()).read().decode()\n",
     "response[0:60] + ' ...'"
    ]
   },
