--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -101,8 +101,7 @@
     "\n",
     "# 2. Instantiate the exporter. We use the `classic` template for now; we'll get into more details\n",
     "# later about how to customize the exporter further.\n",
-    "html_exporter = HTMLExporter()\n",
-    "html_exporter.template_name = 'classic'\n",
+    "html_exporter = HTMLExporter(template_name = 'classic')\n",
     "\n",
     "# 3. Process the notebook we loaded earlier\n",
     "(body, resources) = html_exporter.from_notebook_node(jake_notebook)"
