adopt ruff and address lint

--- a/nbconvert/exporters/tests/files/notebook2.ipynb
+++ b/nbconvert/exporters/tests/files/notebook2.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.random.uniform(size=(100,100))"
+    "a = np.random.uniform(size=(100, 100))"
    ]
   },
   {
