--- a/nbconvert/exporters/tests/files/pngmetadata.ipynb
+++ b/nbconvert/exporters/tests/files/pngmetadata.ipynb
@@ -213,7 +213,8 @@
     "%matplotlib inline\n",
     "%config InlineBackend.figure_formats = set(['retina'])\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.plot([0,1],[1,0])"
+    "\n",
+    "plt.plot([0, 1], [1, 0])"
    ]
   }
  ],
