--- a/nbconvert/tests/files/notebook1.ipynb
+++ b/nbconvert/tests/files/notebook1.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "from sympy import init_printing\n",
     "from sympy import *\n",
+    "\n",
     "init_printing()"
    ]
   },
@@ -58,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "x,y,z = symbols('x y z')"
+    "x, y, z = symbols('x y z')"
    ]
   },
   {
@@ -98,7 +99,8 @@
     }
    ],
    "source": [
-    "e = x**2 + 2.0*y + sin(z); e"
+    "e = x**2 + 2.0 * y + sin(z)\n",
+    "e"
    ]
   },
   {
