--- a/nbconvert/tests/files/notebook2.ipynb
+++ b/nbconvert/tests/files/notebook2.ipynb
@@ -33,6 +33,7 @@
     "%matplotlib inline\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "print(matplotlib.backends.backend)"
    ]
   },
@@ -45,8 +46,9 @@
    "outputs": [],
    "source": [
     "from IPython.display import set_matplotlib_formats\n",
+    "\n",
     "set_matplotlib_formats('png', 'pdf')\n",
-    "matplotlib.rcParams['figure.figsize'] = (2,1)"
+    "matplotlib.rcParams['figure.figsize'] = (2, 1)"
    ]
   },
   {
@@ -97,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "a = np.random.uniform(size=(100,100))"
+    "a = np.random.uniform(size=(100, 100))"
    ]
   },
   {
