--- a/nbconvert/tests/files/notebook1.ipynb
+++ b/nbconvert/tests/files/notebook1.ipynb
@@ -34,7 +34,6 @@
    "source": [
     "from sympy import init_printing\n",
     "from sympy import *\n",
-    "\n",
     "init_printing()"
    ]
   },
@@ -59,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "x, y, z = symbols('x y z')"
+    "x,y,z = symbols('x y z')"
    ]
   },
   {
@@ -99,8 +98,7 @@
     }
    ],
    "source": [
-    "e = x**2 + 2.0 * y + sin(z)\n",
-    "e"
+    "e = x**2 + 2.0*y + sin(z); e"
    ]
   },
   {
