Revert "Adopt ruff and address lint (#1919)"
This reverts commit e2803b1cbc3b2ecf7d1bfcd419653d4a911fb991.

--- a/docs/source/nbconvert_library.ipynb
+++ b/docs/source/nbconvert_library.ipynb
@@ -71,7 +71,6 @@
    "outputs": [],
    "source": [
     "import nbformat\n",
-    "\n",
     "jake_notebook = nbformat.reads(response, as_version=4)\n",
     "jake_notebook.cells[0]"
    ]
@@ -102,7 +101,7 @@
     "\n",
     "# 2. Instantiate the exporter. We use the `classic` template for now; we'll get into more details\n",
     "# later about how to customize the exporter further.\n",
-    "html_exporter = HTMLExporter(template_name='classic')\n",
+    "html_exporter = HTMLExporter(template_name = 'classic')\n",
     "\n",
     "# 3. Process the notebook we loaded earlier\n",
     "(body, resources) = html_exporter.from_notebook_node(jake_notebook)"
@@ -186,7 +185,6 @@
    "source": [
     "# Import the RST exproter\n",
     "from nbconvert import RSTExporter\n",
-    "\n",
     "# Instantiate it\n",
     "rst_exporter = RSTExporter()\n",
     "# Convert the notebook to RST format\n",
@@ -239,7 +237,6 @@
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
-    "\n",
     "Image(data=resources['outputs']['output_3_0.png'], format='png')"
    ]
   },
@@ -300,7 +297,6 @@
    "source": [
     "# create a configuration object that changes the preprocessors\n",
     "from traitlets.config import Config\n",
-    "\n",
     "c = Config()\n",
     "c.HTMLExporter.preprocessors = ['nbconvert.preprocessors.ExtractOutputPreprocessor']\n",
     "\n",
@@ -326,7 +322,7 @@
    },
    "outputs": [],
    "source": [
-    "(_, resources) = html_exporter.from_notebook_node(jake_notebook)\n",
+    "(_, resources)          = html_exporter.from_notebook_node(jake_notebook)\n",
     "(_, resources_with_fig) = html_exporter_with_figs.from_notebook_node(jake_notebook)\n",
     "\n",
     "print(\"resources without figures:\")\n",
@@ -384,18 +380,17 @@
     "from traitlets import Integer\n",
     "from nbconvert.preprocessors import Preprocessor\n",
     "\n",
-    "\n",
     "class PelicanSubCell(Preprocessor):\n",
     "    \"\"\"A Pelican specific preprocessor to remove some of the cells of a notebook\"\"\"\n",
-    "\n",
+    "    \n",
     "    # I could also read the cells from nb.metadata.pelican if someone wrote a JS extension,\n",
-    "    # but for now I'll stay with configurable value.\n",
-    "    start = Integer(0, help=\"first cell of notebook to be converted\").tag(config=True)\n",
-    "    end = Integer(-1, help=\"last cell of notebook to be converted\").tag(config=True)\n",
-    "\n",
+    "    # but for now I'll stay with configurable value. \n",
+    "    start = Integer(0,  help=\"first cell of notebook to be converted\").tag(config=True)\n",
+    "    end   = Integer(-1, help=\"last cell of notebook to be converted\").tag(config=True)\n",
+    "    \n",
     "    def preprocess(self, nb, resources):\n",
     "        self.log.info(\"I'll keep only cells from %d to %d\", self.start, self.end)\n",
-    "        nb.cells = nb.cells[self.start : self.end]\n",
+    "        nb.cells = nb.cells[self.start:self.end]                    \n",
     "        return nb, resources"
    ]
   },
@@ -417,7 +412,7 @@
    "outputs": [],
    "source": [
     "# Create a new config object that configures both the new preprocessor, as well as the exporter\n",
-    "c = Config()\n",
+    "c =  Config()\n",
     "c.PelicanSubCell.start = 4\n",
     "c.PelicanSubCell.end = 6\n",
     "c.RSTExporter.preprocessors = [PelicanSubCell]\n",
@@ -448,17 +443,14 @@
    "source": [
     "from jinja2 import DictLoader\n",
     "\n",
-    "dl = DictLoader(\n",
-    "    {\n",
-    "        'footer': \"\"\"\n",
+    "dl = DictLoader({'footer': \n",
+    "\"\"\"\n",
     "{%- extends 'lab/index.html.j2' -%} \n",
     "\n",
     "{% block footer %}\n",
     "FOOOOOOOOTEEEEER\n",
     "{% endblock footer %}\n",
-    "\"\"\"\n",
-    "    }\n",
-    ")\n",
+    "\"\"\"})\n",
     "\n",
     "\n",
     "exportHTML = HTMLExporter(extra_loaders=[dl], template_file='footer')\n",
