--- a/nbconvert/exporters/tests/files/svg.ipynb
+++ b/nbconvert/exporters/tests/files/svg.ipynb
@@ -474,10 +474,9 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "%config InlineBackend.figure_formats = ['svg']\n",
+    "%config InlineBackend.figure_formats = ['svg'] \n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.plot((0, 1, 2, 3, 4, 5), (0, 3, 4, 4, 3, 0))"
+    "plt.plot((0,1,2,3,4,5),(0,3,4,4,3,0))"
    ]
   }
  ],
