--- a/nbconvert/tests/files/Unexecuted_widget.ipynb
+++ b/nbconvert/tests/files/Unexecuted_widget.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "\n",
     "widgets.IntSlider(\n",
     "    value=7,\n",
     "    min=0,\n",
@@ -19,7 +18,7 @@
     "    continuous_update=False,\n",
     "    orientation='horizontal',\n",
     "    readout=True,\n",
-    "    readout_format='d',\n",
+    "    readout_format='d'\n",
     ")"
    ]
   }
