--- a/nbconvert/tests/files/Widget_List.ipynb
+++ b/nbconvert/tests/files/Widget_List.ipynb
@@ -72,7 +72,7 @@
     "    continuous_update=False,\n",
     "    orientation='horizontal',\n",
     "    readout=True,\n",
-    "    readout_format='d',\n",
+    "    readout_format='d'\n",
     ")"
    ]
   },
@@ -202,10 +202,10 @@
     "widgets.FloatLogSlider(\n",
     "    value=10,\n",
     "    base=10,\n",
-    "    min=-10,  # max exponent of base\n",
-    "    max=10,  # min exponent of base\n",
-    "    step=0.2,  # exponent step\n",
-    "    description='Log Slider',\n",
+    "    min=-10, # max exponent of base\n",
+    "    max=10, # min exponent of base\n",
+    "    step=0.2, # exponent step\n",
+    "    description='Log Slider'\n",
     ")"
    ]
   },
@@ -327,8 +327,8 @@
     "    max=10,\n",
     "    step=1,\n",
     "    description='Loading:',\n",
-    "    bar_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    orientation='horizontal',\n",
+    "    bar_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    orientation='horizontal'\n",
     ")"
    ]
   },
@@ -371,7 +371,7 @@
     "    step=0.1,\n",
     "    description='Loading:',\n",
     "    bar_style='info',\n",
-    "    orientation='horizontal',\n",
+    "    orientation='horizontal'\n",
     ")"
    ]
   },
@@ -405,7 +405,14 @@
     }
    ],
    "source": [
-    "widgets.BoundedIntText(value=7, min=0, max=10, step=1, description='Text:', disabled=False)"
+    "widgets.BoundedIntText(\n",
+    "    value=7,\n",
+    "    min=0,\n",
+    "    max=10,\n",
+    "    step=1,\n",
+    "    description='Text:',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -440,7 +447,14 @@
     }
    ],
    "source": [
-    "widgets.BoundedFloatText(value=7.5, min=0, max=10.0, step=0.1, description='Text:', disabled=False)"
+    "widgets.BoundedFloatText(\n",
+    "    value=7.5,\n",
+    "    min=0,\n",
+    "    max=10.0,\n",
+    "    step=0.1,\n",
+    "    description='Text:',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -471,7 +485,11 @@
     }
    ],
    "source": [
-    "widgets.IntText(value=7, description='Any:', disabled=False)"
+    "widgets.IntText(\n",
+    "    value=7,\n",
+    "    description='Any:',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -506,7 +524,11 @@
     }
    ],
    "source": [
-    "widgets.FloatText(value=7.5, description='Any:', disabled=False)"
+    "widgets.FloatText(\n",
+    "    value=7.5,\n",
+    "    description='Any:',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -559,9 +581,9 @@
     "    value=False,\n",
     "    description='Click me',\n",
     "    disabled=False,\n",
-    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltip='Description',\n",
-    "    icon='check',\n",
+    "    icon='check'\n",
     ")"
    ]
   },
@@ -597,7 +619,11 @@
     }
    ],
    "source": [
-    "widgets.Checkbox(value=False, description='Check me', disabled=False)"
+    "widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Check me',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -763,9 +789,9 @@
    "source": [
     "widgets.RadioButtons(\n",
     "    options=['pepperoni', 'pineapple', 'anchovies'],\n",
-    "    #     value='pineapple',\n",
+    "#     value='pineapple',\n",
     "    description='Pizza topping:',\n",
-    "    disabled=False,\n",
+    "    disabled=False\n",
     ")"
    ]
   },
@@ -806,7 +832,7 @@
     "    value='OSX',\n",
     "    # rows=10,\n",
     "    description='OS:',\n",
-    "    disabled=False,\n",
+    "    disabled=False\n",
     ")"
    ]
   },
@@ -845,7 +871,7 @@
     "    disabled=False,\n",
     "    continuous_update=False,\n",
     "    orientation='horizontal',\n",
-    "    readout=True,\n",
+    "    readout=True\n",
     ")"
    ]
   },
@@ -880,11 +906,13 @@
    ],
    "source": [
     "import datetime\n",
-    "\n",
-    "dates = [datetime.date(2015, i, 1) for i in range(1, 13)]\n",
+    "dates = [datetime.date(2015,i,1) for i in range(1,13)]\n",
     "options = [(i.strftime('%b'), i) for i in dates]\n",
     "widgets.SelectionRangeSlider(\n",
-    "    options=options, index=(0, 11), description='Months (2015)', disabled=False\n",
+    "    options=options,\n",
+    "    index=(0,11),\n",
+    "    description='Months (2015)',\n",
+    "    disabled=False\n",
     ")"
    ]
   },
@@ -924,9 +952,9 @@
     "    options=['Slow', 'Regular', 'Fast'],\n",
     "    description='Speed:',\n",
     "    disabled=False,\n",
-    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltips=['Description of slow', 'Description of regular', 'Description of fast'],\n",
-    "    #     icons=['check'] * 3\n",
+    "#     icons=['check'] * 3\n",
     ")"
    ]
   },
@@ -962,9 +990,9 @@
     "widgets.SelectMultiple(\n",
     "    options=['Apples', 'Oranges', 'Pears'],\n",
     "    value=['Oranges'],\n",
-    "    # rows=10,\n",
+    "    #rows=10,\n",
     "    description='Fruits',\n",
-    "    disabled=False,\n",
+    "    disabled=False\n",
     ")"
    ]
   },
@@ -1019,7 +1047,10 @@
    ],
    "source": [
     "widgets.Text(\n",
-    "    value='Hello World', placeholder='Type something', description='String:', disabled=False\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False   \n",
     ")"
    ]
   },
@@ -1052,7 +1083,10 @@
    ],
    "source": [
     "widgets.Textarea(\n",
-    "    value='Hello World', placeholder='Type something', description='String:', disabled=False\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False\n",
     ")"
    ]
   },
@@ -1236,9 +1270,9 @@
     "widgets.Button(\n",
     "    description='Click me',\n",
     "    disabled=False,\n",
-    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
     "    tooltip='Click me',\n",
-    "    icon='check',\n",
+    "    icon='check'\n",
     ")"
    ]
   },
@@ -1287,13 +1321,13 @@
    ],
    "source": [
     "play = widgets.Play(\n",
-    "    #     interval=10,\n",
+    "#     interval=10,\n",
     "    value=50,\n",
     "    min=0,\n",
     "    max=100,\n",
     "    step=1,\n",
     "    description=\"Press play\",\n",
-    "    disabled=False,\n",
+    "    disabled=False\n",
     ")\n",
     "slider = widgets.IntSlider()\n",
     "widgets.jslink((play, 'value'), (slider, 'value'))\n",
@@ -1330,7 +1364,10 @@
     }
    ],
    "source": [
-    "widgets.DatePicker(description='Pick a Date', disabled=False)"
+    "widgets.DatePicker(\n",
+    "    description='Pick a Date',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -1361,7 +1398,12 @@
     }
    ],
    "source": [
-    "widgets.ColorPicker(concise=False, description='Pick a color', value='blue', disabled=False)"
+    "widgets.ColorPicker(\n",
+    "    concise=False,\n",
+    "    description='Pick a color',\n",
+    "    value='blue',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -1396,7 +1438,7 @@
    "source": [
     "widgets.FileUpload(\n",
     "    accept='',  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
-    "    multiple=False,  # True to accept multiple files upload else False\n",
+    "    multiple=False  # True to accept multiple files upload else False\n",
     ")"
    ]
   },
